--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#5A9FF0</color>
+    <color name="colorPrimaryDark">#4A90E2</color>
+    <color name="colorSelectedItem">#F3F8FE</color>
+    <color name="colorAccent">#FFF</color>
+    <color name="colorBlack">#000</color>
 </resources>
