weather details and forecasts were added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimaryDark"
             android:theme="?attr/actionBarTheme"
-            android:minHeight="?attr/actionBarSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -27,10 +27,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="Zaporizhzhya"
-                    android:text="Zaporizhzhya"
                     android:textSize="16sp"
+                    android:text="Zaporizhzhya"
                     android:paddingStart="8dp"
                     android:textColor="@color/colorAccent"/>
     </android.support.v7.widget.Toolbar>
 
-</android.support.constraint.ConstraintLayout>
+
+    <include layout="@layout/weather_details"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_time_forecast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_day_forecast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"/>
+
+</LinearLayout>
