--- a/app/src/main/res/layout/weather_details.xml
+++ b/app/src/main/res/layout/weather_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -91,4 +91,4 @@
             android:id="@+id/iv_wind_direction"
             app:layout_constraintStart_toEndOf="@+id/tv_wind" android:layout_marginStart="4dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_wind" app:layout_constraintTop_toTopOf="@+id/tv_wind"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
