--- a/app/src/main/res/layout/rv_item_day_forecast.xml
+++ b/app/src/main/res/layout/rv_item_day_forecast.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
    <data>
-      <import type="android.view.View" />
       <variable name="dayForecast"
                 type="com.chumazkiyway.weather.models.DayForecast"/>
    </data>
@@ -15,7 +15,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/tv_week_day"
-              android:text="Mon"
+              android:text="@{dayForecast.dayOfWeek}"
               android:textColor="@color/colorBlack"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +23,9 @@
               android:layout_marginTop="8dp"
               android:layout_marginStart="16dp"
               android:layout_marginBottom="8dp"
-              android:textSize="24sp"/>
+              android:textSize="18sp"/>
       <TextView
-              android:text="27/11"
+              android:text="@{@string/min_max_temperature(dayForecast.maxT, dayForecast.minT)}"
               tools:text="27/11"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -33,7 +33,7 @@
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toEndOf="@+id/tv_week_day" android:layout_marginStart="8dp"
               app:layout_constraintEnd_toStartOf="@+id/iv_weather_condition" android:layout_marginEnd="8dp"
-              android:textColor="@color/colorBlack" android:textSize="24sp"/>
+              android:textColor="@color/colorBlack" android:textSize="18sp"/>
       <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" app:srcCompat="@drawable/ic_white_night_bright"
