--- a/app/src/main/res/layout/rv_item_time_forecast.xml
+++ b/app/src/main/res/layout/rv_item_time_forecast.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
         <variable name="timeForecast"
                   type="com.chumazkiyway.weather.models.TimeForecast"/>
     </data>
@@ -12,42 +12,55 @@
             android:background="@color/colorPrimary">
 
         <TextView
-                android:text="17"
+                android:text="@{timeForecast.time}"
                 tools:text="17"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_h_time" android:textColor="@color/colorAccent"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/tv_h_time"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textSize="12sp" app:layout_constraintStart_toStartOf="@+id/imageView"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintHorizontal_bias="0.0"/>
         <TextView
                 android:text="00"
                 tools:text="00"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_m_time" android:textColor="@color/colorAccent"
+                android:id="@+id/tv_m_time"
+                android:textColor="@color/colorAccent"
                 app:layout_constraintStart_toEndOf="@+id/tv_h_time"
-                app:layout_constraintTop_toTopOf="@+id/tv_h_time" android:textSize="8sp"
+                app:layout_constraintTop_toTopOf="@+id/tv_h_time"
+                android:textSize="11sp"
                 android:layout_marginStart="2dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_h_time" app:layout_constraintVertical_bias="0.25"/>
+                app:layout_constraintBottom_toBottomOf="@+id/tv_h_time"
+                app:layout_constraintVertical_bias="0.25" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
         <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp" app:srcCompat="@drawable/ic_white_day_rain"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                app:srcCompat="@drawable/ic_white_day_rain"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView"
-                android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/tv_temperature"
-                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_h_time"
-                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/imageView"
+                android:layout_marginBottom="4dp"
+                app:layout_constraintBottom_toTopOf="@+id/tv_temperature"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_h_time"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"/>
         <TextView
-                android:text="23"
+                android:text="@{@string/temperature(timeForecast.temperature)}"
                 tools:text="23"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_temperature"
                 android:textColor="@color/colorAccent"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
-                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="@+id/imageView"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
