--- a/app/src/main/res/layout/rv_item_day_forecast.xml
+++ b/app/src/main/res/layout/rv_item_day_forecast.xml
@@ -36,7 +36,8 @@
               android:textColor="@color/colorBlack" android:textSize="18sp"/>
       <ImageView
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content" app:srcCompat="@drawable/ic_white_night_bright"
+              android:layout_height="wrap_content"
+              app:imageResource="@{dayForecast.weatherIcon}"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/iv_weather_condition"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
