--- a/app/src/main/res/layout/weather_details.xml
+++ b/app/src/main/res/layout/weather_details.xml
@@ -1,94 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimaryDark">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="details" type="com.chumazkiyway.weather.models.DayForecast"/>
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorPrimaryDark">
 
-    <ImageView
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            app:srcCompat="@drawable/ic_white_day_bright"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/iv_weather_condition"
-            android:contentDescription="@string/weather_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintEnd_toStartOf="@+id/iv_humidity"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date" app:layout_constraintVertical_bias="0.48000002"
-            android:layout_marginBottom="24dp"/>
-    <ImageView
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_temp"
-            android:id="@+id/iv_temperature"
-            android:contentDescription="@string/temperature_icon"
-            app:layout_constraintBottom_toTopOf="@+id/iv_humidity"
-            app:layout_constraintStart_toStartOf="@+id/iv_humidity"
-            android:layout_marginBottom="16dp"/>
-    <TextView
-            android:text="29 / 31 C"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_temperature"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintBottom_toTopOf="@+id/tv_humidity"
-            app:layout_constraintStart_toStartOf="@+id/tv_humidity"
-            android:layout_marginBottom="16dp"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_humidity"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/iv_humidity"
-            app:layout_constraintHorizontal_weight="3"
-            app:layout_constraintVertical_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.65"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/humidity_icon"/>
-    <TextView
-            android:text="33%"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/tv_humidity"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintVertical_bias="0.502"
-            app:layout_constraintHorizontal_weight="4"
-            app:layout_constraintStart_toEndOf="@+id/iv_humidity"
-            android:layout_marginStart="8dp"/>
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_wind"
-            android:id="@+id/iv_wind"
-            app:layout_constraintTop_toBottomOf="@+id/iv_humidity"
-            app:layout_constraintStart_toStartOf="@+id/iv_humidity"
-            android:contentDescription="@string/wind_icon" android:layout_marginTop="16dp"/>
-    <TextView
-            android:text="5m/s"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_wind"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
-            app:layout_constraintStart_toStartOf="@+id/tv_humidity" android:layout_marginTop="16dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_date" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp" android:textColor="@color/colorAccent" android:text="Mon, 23/09"/>
-    <ImageView
-            android:layout_width="16dp"
-            android:layout_height="20dp" app:srcCompat="@drawable/ic_icon_wind_n"
-            android:id="@+id/iv_wind_direction"
-            app:layout_constraintStart_toEndOf="@+id/tv_wind" android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_wind" app:layout_constraintTop_toTopOf="@+id/tv_wind"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                app:imageResource="@{details.weatherIcon}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/iv_weather_condition"
+                android:contentDescription="@string/weather_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.503"
+                app:layout_constraintEnd_toStartOf="@+id/iv_humidity"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_date" app:layout_constraintVertical_bias="0.48000002"
+                android:layout_marginBottom="24dp"/>
+        <ImageView
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_temp"
+                android:id="@+id/iv_temperature"
+                android:contentDescription="@string/temperature_icon"
+                app:layout_constraintBottom_toTopOf="@+id/iv_humidity"
+                app:layout_constraintStart_toStartOf="@+id/iv_humidity"
+                android:layout_marginBottom="16dp"/>
+        <TextView
+                android:text="@{@string/min_max_temperature(details.maxT, details.minT)}"
+                tools:text="29 / 31 C"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_temperature"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintBottom_toTopOf="@+id/tv_humidity"
+                app:layout_constraintStart_toStartOf="@+id/tv_humidity"
+                android:layout_marginBottom="16dp"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_humidity"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/iv_humidity"
+                app:layout_constraintHorizontal_weight="3"
+                app:layout_constraintVertical_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="0.65"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:contentDescription="@string/humidity_icon"/>
+        <TextView
+                android:text="@{@string/humidity(details.humidity)}"
+                tools:text="33%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/tv_humidity"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintVertical_bias="0.502"
+                app:layout_constraintHorizontal_weight="4"
+                app:layout_constraintStart_toEndOf="@+id/iv_humidity"
+                android:layout_marginStart="8dp"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_wind"
+                android:id="@+id/iv_wind"
+                app:layout_constraintTop_toBottomOf="@+id/iv_humidity"
+                app:layout_constraintStart_toStartOf="@+id/iv_humidity"
+                android:contentDescription="@string/wind_icon" android:layout_marginTop="16dp"/>
+        <TextView
+                android:text="5k/p"
+                tools:text="@{@string/wind_speed(details.windSpeed)}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_wind"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_humidity"
+                app:layout_constraintStart_toStartOf="@+id/tv_humidity" android:layout_marginTop="16dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_date" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp" android:textColor="@color/colorAccent"
+                tools:text="Mon, 23/09"
+                android:text="@{details.date}"
+            />
+        <ImageView
+                android:layout_width="16dp"
+                android:layout_height="20dp" app:imageResource="@{details.windDirection}"
+                android:id="@+id/iv_wind_direction"
+                app:layout_constraintStart_toEndOf="@+id/tv_wind" android:layout_marginStart="4dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_wind" app:layout_constraintTop_toTopOf="@+id/tv_wind"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
