--- a/app/src/main/res/layout/rv_item_day_forecast.xml
+++ b/app/src/main/res/layout/rv_item_day_forecast.xml
@@ -31,8 +31,8 @@
               android:layout_height="wrap_content"
               android:id="@+id/tv_temperature" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-              app:layout_constraintStart_toEndOf="@+id/tv_week_day" android:layout_marginStart="8dp"
-              app:layout_constraintEnd_toStartOf="@+id/iv_weather_condition" android:layout_marginEnd="8dp"
+              app:layout_constraintStart_toEndOf="parent" android:layout_marginStart="8dp"
+              app:layout_constraintEnd_toStartOf="parent" android:layout_marginEnd="8dp"
               android:textColor="@color/colorBlack" android:textSize="18sp"/>
       <ImageView
               android:layout_width="wrap_content"
