--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -7,7 +7,7 @@
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/map"
-          tools:context=".views.MapsActivity"
+          tools:context=".views.activities.MapsActivity"
           android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
