--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:aapt="http://schemas.android.com/aapt"
         android:width="108dp"
         android:height="108dp"
-        android:viewportHeight="108"
-        android:viewportWidth="108">
+        android:viewportWidth="73.46939"
+        android:viewportHeight="73.46939">
+<group android:translateX="18.734694"
+       android:translateY="18.734694">
     <path
-            android:fillType="evenOdd"
-            android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                    android:endX="78.5885"
-                    android:endY="90.9159"
-                    android:startX="48.7653"
-                    android:startY="61.0927"
-                    android:type="linear">
-                <item
-                        android:color="#44000000"
-                        android:offset="0.0"/>
-                <item
-                        android:color="#00000000"
-                        android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
+            android:pathData="M5.28,12.84A4.72,4.72 0,0 1,14.5 11.4a10.4,10.4 0,0 1,1.87 -1.12l-0.05,0V6.53H12.63L10,3.92 7.41,6.53H3.71v3.7L1.1,12.84l2.61,2.61v3.7H5.8a8.89,8.89 0,0 1,1.58 -2.38A4.73,4.73 0,0 1,5.28 12.84Z"
+            android:fillColor="#fff"/>
     <path
-            android:fillColor="#FFFFFF"
-            android:fillType="nonZero"
-            android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-            android:strokeColor="#00000000"
-            android:strokeWidth="1"/>
+            android:pathData="M29.39,18.25A8.66,8.66 0,0 0,14.59 14a8.28,8.28 0,0 0,-1.38 1.93A6.94,6.94 0,0 0,14 29.76L29,29.76a5.76,5.76 0,0 0,0.4 -11.51ZM28.99,27.45L14,27.45a4.62,4.62 0,0 1,-4.63 -4.62,4.58 4.58,0 0,1 0.27,-1.49 4.14,4.14 0,0 1,0.26 -0.61A4.59,4.59 0,0 1,14 18.2h0.82a6.48,6.48 0,0 1,1.54 -2.68,6.36 6.36,0 0,1 10.94,4.41v0.58L29,20.51a3.47,3.47 0,1 1,0 6.94Z"
+            android:fillColor="#fff"/>
+</group>
 </vector>
