--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         <variable name="viewModel"
                   type="com.chumazkiyway.weather.viewmodels.MainActivityViewModel"/>
     </data>
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -30,7 +30,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="@string/set_location" />
+                    android:contentDescription="@string/pick_location"/>
             <TextView
                     android:id="@+id/tv_current_location"
                     android:layout_width="wrap_content"
@@ -49,17 +49,31 @@
         <include
                 layout="@layout/weather_details"
                 android:id="@+id/weather_details"
-                app:details="@{viewModel.selectedDay}"/>
+                app:details="@{viewModel.selectedDay}"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toTopOf="@+id/rv_time_forecast"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_time_forecast"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/weather_details"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintBottom_toTopOf="@+id/rv_day_forecast"/>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_day_forecast"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/rv_time_forecast"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
